--- a/src/styles/Contador.css
+++ b/src/styles/Contador.css
@@ -1,13 +1,15 @@
 .contador {
   min-width: 20rem;
-  height: 15rem;
+  height: 10rem;
   margin: 1rem;
   padding: .25rem;
-  font-size: 10rem;
+  font-size: 8rem;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 0.25rem solid white;
   border-radius: 1rem;
+  background-color: #3f4553;
+
 }
