--- a/src/styles/Body.css
+++ b/src/styles/Body.css
@@ -1,19 +1,19 @@
 html,
 body {
-  background-color: #282c34;
-}
-
-.Body {
+  /* background-color: #282c34; */
+  background-color: #0B004A;
   text-align: center;
   color: white;
+}
+
+.mainContainer,
+.upperContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
 }
 
 .trini {
-  width: 20rem;
-  border-radius: 1rem;
-  margin: 1rem;
+  width: 400px;
+  border-radius: 20px;
 }
