--- a/src/styles/Boton.css
+++ b/src/styles/Boton.css
@@ -1,22 +1,20 @@
 button {
-  font-size: 2rem;
+  color: white;
+  font-size: 40px;
   font-family: Roboto, sans-serif;
-  width: 9rem;
-  height: 5rem;
-  margin: 1rem;
-  border: solid 0.2rem #409;
-  border-radius: 1rem;
+  width: 150px;
+  height: 60px;
+  margin: 0px 15px;
+  border: solid 2px white;
+  border-radius: 15px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #904
+  background-color: #94043B
 }
 
+.btnReset,
 .btnClick {
-  background-color: #092
-}
-
-.btnReset {
-  background-color: #092
+  background-color: #5F0785
 }
